Update profile image in index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <section class="Hero" >
   
     <div class="container px-4 py-5 text-center">
-      <img class="d-block mx-auto mb-4 rounded-circle" src="/images/IMG_3770.jpg" alt="Marquis Buckley" width="200"
+      <img class="d-block mx-auto mb-4 rounded-circle" src="/images/blank&white.jpeg" alt="Marquis Buckley" width="200"
         height="200" />
 
       <h1 class="display-5 fw-bold text-white">MARQUIS BUCKLEY</h1>
