--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -6,10 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>HomePage</title>
 
+  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
 
-  <link rel="stylesheet" href="/Mainpage.css" />
+  <link rel="stylesheet" href="/HomePage/Mainpage.css"/>
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -58,9 +59,7 @@
               </p>
 
               <div class="mt-auto">
-                <button type="button" class="btn btn-outline-success btn-lg">
-                  View About
-                </button>
+                <a class="btn btn-outline-success btn-lg" href="/AboutPage/About.html">View About</a>
               </div>
             </div>
           </div>
