Fix paths and assets for live site

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
 
-  <link rel="stylesheet" href="/HomePage/Mainpage.css"/>
+  <link rel="stylesheet" href="./Mainpage.css"/>
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,7 +22,7 @@
   <section class="Hero" >
   
     <div class="container px-4 py-5 text-center">
-      <img class="d-block mx-auto mb-4 rounded-circle" src="/images/blank&white.jpeg" alt="Marquis Buckley" width="200"
+      <img class="d-block mx-auto mb-4 rounded-circle" src="./images/blank&white.jpeg" alt="Marquis Buckley" width="200"
         height="200" />
 
       <h1 class="display-5 fw-bold text-white">MARQUIS BUCKLEY</h1>
@@ -59,7 +59,7 @@
               </p>
 
               <div class="mt-auto">
-                <a class="btn btn-outline-success btn-lg" href="/AboutPage/About.html">View About</a>
+                <a class="btn btn-outline-success btn-lg" href="./AboutPage/About.html">View About</a>
               </div>
             </div>
           </div>
@@ -98,7 +98,7 @@
         <li class="nav-item"><a href="https://www.linkedin.com/in/marquisbuckley/" class="nav-link px-2 text-body-secondary">Linkedin</a></li>
         <li class="nav-item"><a href="mailto:marquisebuckley@gmail.com?subject=Opportunity%20Inquiry" class="nav-link px-2 text-body-secondary">Email</a></li>
         <li class="nav-item"><a href="tel:18328203667" class="nav-link px-2 text-body-secondary">Phone</a></li>
-        <li class="nav-item"><a href="/assests/Marquis Buckley_Resume.pdf"  target="_blank"   class="nav-link px-2 text-body-secondary">Resume</a></li>
+        <li class="nav-item"><a href="./assests/Marquis Buckley_Resume.pdf"  target="_blank"   class="nav-link px-2 text-body-secondary">Resume</a></li>
       </ul>
       <p class="text-center text-body-secondary">© 2025 Marquis Buckley</p>
     </footer>
