Fix paths and assets for live site

--- a/AboutPage/About.html
+++ b/AboutPage/About.html
@@ -27,7 +27,7 @@
 
     <!-- Who I Am Section -->
      <div class="container py-5">
-      <h2 class="mb-4 text-center translate-x">Who I Am</h2>
+      <h2 class="mb-4 text-center">Who I Am</h2>
 
         <div class="row align-items-center">
          <div class="col-12 col-md-4 text-center">
