Refine projects layout and styling

--- a/index.html
+++ b/index.html
@@ -77,9 +77,8 @@
               </p>
 
               <div class="mt-auto">
-                <button type="button" class="btn btn-outline-info btn-lg">
-                  View Projects
-                </button>
+                
+                <a href="/projects/projects.html" class="btn btn-outline-info btn-lg">View Projects</a>
               </div>
             </div>
           </div>
