Refine projects layout and styling

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -2,13 +2,32 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projects</title>
+  <title>Projects | Marquis Buckley — Software Engineering Portfolio</title>
+  
+  <meta name="description"
+    content="Software engineering projects by Marquis Buckley, including full-stack web applications, enterprise network infrastructure, and relational database design." />
+  
+  <meta name="keywords"
+    content="software engineering projects, full stack projects, backend projects, SQL database design, network infrastructure, portfolio" />
+  
+  <meta name="author" content="Marquis Buckley" />
+  
+  <!-- Open Graph -->
+  <meta property="og:title" content="Projects | Marquis Buckley — Software Engineer" />
+  <meta property="og:description"
+    content="View real-world software engineering projects including web applications, network architecture, and database systems." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://yourdomain.com/projects/projects.html" />
+  <meta name="robots" content="index, follow" />
+
+  
+  
+  
+  
   <link rel="stylesheet" href="../projects/projects.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-</head>
+  </head>
 
 <body>
 
