--- a/index.html
+++ b/index.html
@@ -4,13 +4,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HomePage</title>
+  <title>Marquis Buckley | Software Engineer & Full-Stack Developer</title>
 
-  
+  <meta name="description"
+    content="Portfolio of Marquis Buckley, a software engineer specializing in full-stack and backend development, building scalable, real-world applications." />
+
+  <meta name="keywords"
+    content="Marquis Buckley, software engineer, full stack developer, backend developer, portfolio, web developer" />
+
+  <meta name="author" content="Marquis Buckley" />
+
+  <!-- Open Graph (LinkedIn, Slack, etc.) -->
+  <meta property="og:title" content="Marquis Buckley | Software Engineer" />
+  <meta property="og:description"
+    content="Full-stack and backend software engineer building scalable, production-ready applications." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://yourdomain.com/" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Marquis Buckley | Software Engineer" />
+  <meta name="twitter:description" content="Full-stack and backend software engineer portfolio." />
+
+  <meta name="robots" content="index, follow" />
+
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
 
-  <link rel="stylesheet" href="./Mainpage.css"/>
+  <link rel="stylesheet" href="./Mainpage.css" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,8 +41,8 @@
 
 <body>
   <!-- HERO (full screen) -->
-  <section class="Hero" >
-  
+  <section class="Hero">
+
     <div class="container px-4 py-5 text-center">
       <img class="d-block mx-auto mb-4 rounded-circle" src="./images/blank&white.jpeg" alt="Marquis Buckley" width="200"
         height="200" />
@@ -55,7 +77,8 @@
               <h3 class="mt-5 mb-3 display-6 fw-bold">About</h3>
 
               <p class="lead">
-                Engineer with experience in high-accountability operational environments, bringing discipline and systems-level thinking to building reliable, scalable software.
+                Engineer with experience in high-accountability operational environments, bringing discipline and
+                systems-level thinking to building reliable, scalable software.
               </p>
 
               <div class="mt-auto">
@@ -77,7 +100,7 @@
               </p>
 
               <div class="mt-auto">
-                
+
                 <a href="/projects/projects.html" class="btn btn-outline-info btn-lg">View Projects</a>
               </div>
             </div>
@@ -94,10 +117,13 @@
   <div class="container">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="https://www.linkedin.com/in/marquisbuckley/" class="nav-link px-2 text-body-secondary">Linkedin</a></li>
-        <li class="nav-item"><a href="mailto:marquisebuckley@gmail.com?subject=Opportunity%20Inquiry" class="nav-link px-2 text-body-secondary">Email</a></li>
+        <li class="nav-item"><a href="https://www.linkedin.com/in/marquisbuckley/"
+            class="nav-link px-2 text-body-secondary">Linkedin</a></li>
+        <li class="nav-item"><a href="mailto:marquisebuckley@gmail.com?subject=Opportunity%20Inquiry"
+            class="nav-link px-2 text-body-secondary">Email</a></li>
         <li class="nav-item"><a href="tel:18328203667" class="nav-link px-2 text-body-secondary">Phone</a></li>
-        <li class="nav-item"><a href="./assests/Marquis Buckley_Resume.pdf"  target="_blank"   class="nav-link px-2 text-body-secondary">Resume</a></li>
+        <li class="nav-item"><a href="./assests/Marquis Buckley_Resume.pdf" target="_blank"
+            class="nav-link px-2 text-body-secondary">Resume</a></li>
       </ul>
       <p class="text-center text-body-secondary">© 2025 Marquis Buckley</p>
     </footer>
