--- a/AboutPage/About.html
+++ b/AboutPage/About.html
@@ -23,7 +23,7 @@
   <meta property="og:url" content="https://yourdomain.com/AboutPage/About.html" />
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" />
-
+  <link rel="stylesheet" href="global.css">
   <link rel="stylesheet" href="About.css" />
 
 </head>
