--- a/AboutPage/About.html
+++ b/AboutPage/About.html
@@ -32,7 +32,7 @@
 
   <!-- Hero Section -->
   <div class="px-4 py-5 my-5 text-center">
-    <h1>Marquis Buckley</h1>
+    <h1>Marquis Buckley (Secret clearance)</h1>
 
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">
