Minor formatting change

--- a/index.html
+++ b/index.html
@@ -2,48 +2,57 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Marquis Buckley | Software Engineer & Full-Stack Developer</title>
 
-  <title>Marquis Buckley | Software Engineer</title>
-  <meta name="title" content="Marquis Buckley | Software Engineer">
-  <meta name="description" content="Software engineer focused on building reliable, scalable backend and full-stack systems. Experienced in high-accountability operational environments.">
-  <meta name="author" content="Marquis Buckley">
-  <meta name="robots" content="index, follow">
+  <meta name="description"
+    content="Portfolio of Marquis Buckley, a software engineer specializing in full-stack and backend development, building scalable, real-world applications." />
 
-  <link rel="canonical" href="https://carbonsega.com/">
+  <meta name="keywords"
+    content="Marquis Buckley, software engineer, full stack developer, backend developer, portfolio, web developer" />
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://carbonsega.com/">
-  <meta property="og:title" content="Marquis Buckley | Software Engineer">
-  <meta property="og:description" content="Software engineer building scalable backend and full-stack systems with a disciplined, systems-first approach.">
-  <meta property="og:image" content="https://carbonsega.com/images/IMG_3770.jpg">
+  <meta name="author" content="Marquis Buckley" />
 
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
+  <!-- Open Graph (LinkedIn, Slack, etc.) -->
+  <meta property="og:title" content="Marquis Buckley | Software Engineer" />
+  <meta property="og:description"
+    content="Full-stack and backend software engineer building scalable, production-ready applications." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://yourdomain.com/" />
 
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Marquis Buckley | Software Engineer" />
+  <meta name="twitter:description" content="Full-stack and backend software engineer portfolio." />
 
-  <link rel="stylesheet" href="/Mainpage.css">
+  <meta name="robots" content="index, follow" />
+
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
+    <link rel="stylesheet" href="global.css">
+  <link rel="stylesheet" href="./Mainpage.css" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+  
 </head>
 
 <body>
   <!-- HERO (full screen) -->
-  <section class="Hero" >
-  
+  <section class="Hero">
+
     <div class="container px-4 py-5 text-center">
-      <img class="d-block mx-auto mb-4 rounded-circle" src="/images/IMG_3770.jpg" alt="Marquis Buckley" width="200"
+      <img class="d-block mx-auto mb-4 rounded-circle" src="./images/blank&white.jpeg" alt="Marquis Buckley" width="200"
         height="200" />
 
       <h1 class="display-5 fw-bold text-white">MARQUIS BUCKLEY</h1>
 
       <div class="col-lg-6 mx-auto">
         <p class="lead text-light mb-4">
-          Software engineer focused on building reliable, scalable systems across backend and fulls tack applications.
+          Software engineer focused on building reliable, scalable systems across backend and full-stack applications.
         </p>
 
         <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
@@ -69,13 +78,12 @@
               <h3 class="mt-5 mb-3 display-6 fw-bold">About</h3>
 
               <p class="lead">
-                Engineer with experience in high accountability operational environments, bringing discipline and systems level thinking to building reliable, scalable software.
+                Engineer with experience in high-accountability operational environments, bringing discipline and
+                systems-level thinking to building reliable, scalable software.
               </p>
 
               <div class="mt-auto">
-                <button type="button" class="btn btn-outline-success btn-lg">
-                  View About
-                </button>
+                <a class="btn btn-outline-success btn-lg" href="./AboutPage/About.html">View About</a>
               </div>
             </div>
           </div>
@@ -89,13 +97,12 @@
               <h3 class="mt-5 mb-3 display-6 fw-bold">Projects</h3>
 
               <p class="lead">
-                Full stack applications, network architecture, and data systems selected work and implementations.
+                Full-stack applications, network architecture, and data systems selected work and implementations.
               </p>
 
               <div class="mt-auto">
-                <button type="button" class="btn btn-outline-info btn-lg">
-                  View Projects
-                </button>
+
+                <a href="/projects/projects.html" class="btn btn-outline-info btn-lg">View Projects</a>
               </div>
             </div>
           </div>
@@ -111,10 +118,13 @@
   <div class="container">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="https://www.linkedin.com/in/marquisbuckley/" class="nav-link px-2 text-body-secondary">Linkedin</a></li>
-        <li class="nav-item"><a href="mailto:marquisebuckley@gmail.com?subject=Opportunity%20Inquiry" class="nav-link px-2 text-body-secondary">Email</a></li>
+        <li class="nav-item"><a href="https://www.linkedin.com/in/marquisbuckley/"
+            class="nav-link px-2 text-body-secondary">Linkedin</a></li>
+        <li class="nav-item"><a href="mailto:marquisebuckley@gmail.com?subject=Opportunity%20Inquiry"
+            class="nav-link px-2 text-body-secondary">Email</a></li>
         <li class="nav-item"><a href="tel:18328203667" class="nav-link px-2 text-body-secondary">Phone</a></li>
-        <li class="nav-item"><a href="/assests/Marquis Buckley_Resume.pdf"  target="_blank"   class="nav-link px-2 text-body-secondary">Resume</a></li>
+        <li class="nav-item"><a href="./assests/Marquis Buckley_Resume.pdf" target="_blank"
+            class="nav-link px-2 text-body-secondary">Resume</a></li>
       </ul>
       <p class="text-center text-body-secondary">© 2025 Marquis Buckley</p>
     </footer>
@@ -125,3 +135,4 @@
     crossorigin="anonymous"></script>
 </body>
 
+</html>
