Minor formatting change

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <div class="col-lg-6 mx-auto">
         <p class="lead text-light mb-4">
-          Software engineer focused on building reliable, scalable systems across backend and full-stack applications.
+          Software engineer focused on building reliable, scalable systems across backend and full stack applications.
         </p>
 
         <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
@@ -78,7 +78,7 @@
               <h3 class="mt-5 mb-3 display-6 fw-bold">About</h3>
 
               <p class="lead">
-                Engineer with experience in high-accountability operational environments, bringing discipline and
+                Engineer with experience in high accountability operational environments, bringing discipline and
                 systems-level thinking to building reliable, scalable software.
               </p>
 
