Update project description

--- a/AboutPage/About.html
+++ b/AboutPage/About.html
@@ -64,9 +64,8 @@
 
         <div class="about-box">
           <p>
-            I’ve worked on web-based projects including portfolio sites,
-            responsive layouts, and full-stack applications deployed using
-            GitHub and Netlify.
+            Developed web based projects including portfolio websites, responsive user interfaces, and full-stack
+            applications, with experience deploying and maintaining applications on modern web hosting platforms.
           </p>
         </div>
       </div>
